# LearnOpenGL

./: CMakeLists.txt  README.md
shaders/: shader.fs  shader.vs  shader_awe.frag  shader_awe.vert  shader_y.fs
src/: CMakeLists.txt  main.cpp  main1.cpp  shader.cpp  shader.hpp
src/lessons/: coord.cpp  coord.h
src/utils/: camera.cpp  camera.h  logger.cpp  logger.hpp  shader.cpp  shader.hpp
